# avionics-pc-tools-gui

./: CMakeLists.txt
src/: main.cpp
src/resources/: resources.qrc
src/serial/: serial.cpp  serial.h
src/utilities/: QDirFinder.cpp  QDirFinder.h
src/widgets/: DebuggingToolsWidget.cpp  DebuggingToolsWidget.h  FlightEmulationWidget.cpp  SerialPortSelectorWidget.cpp  SerialPortSelectorWidget.h  TerminalWidget.cpp  TerminalWidget.h
src/windows/: MainWindow.cpp  MainWindow.h
